replace powermockito with junit jupiter and upgrade mockito