@@ -86,7 +86,6 @@ dependencies {
     implementation 'net.sourceforge.javacsv:javacsv:2.0'
     implementation 'commons-codec:commons-codec:1.20.0'
     implementation 'org.codehaus.jettison:jettison:1.5.4'
-    implementation 'junit:junit:4.13.2'
     implementation('com.google.guava:guava:33.5.0-jre') {exclude module: "solr-solrj"}
     implementation 'org.projectlombok:lombok:1.18.42'
     implementation 'io.micrometer:micrometer-registry-prometheus'
@@ -109,7 +108,6 @@ dependencies {
     testAnnotationProcessor 'org.projectlombok:lombok:1.18.42'
     implementation 'com.mysql:mysql-connector-j:9.1.0'
     annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
-    testImplementation('org.springframework.boot:spring-boot-starter-test')
     testImplementation('org.springframework.restdocs:spring-restdocs-mockmvc')
     implementation('javax.validation:validation-api:2.0.1.Final')
     implementation 'jakarta.mail:jakarta.mail-api:2.2.0-M1'
@@ -117,9 +115,9 @@ dependencies {
     implementation 'com.sun.mail:jakarta.mail:2.0.2'
     implementation("tools.jackson.core:jackson-core:3.0.3")
 
-    testImplementation 'org.mockito:mockito-core:5.5.0'
-    testImplementation 'org.powermock:powermock-api-mockito2:2.0.9'
-    testImplementation 'org.powermock:powermock-module-junit4:2.0.9'
+    testImplementation 'org.mockito:mockito-core:5.23.0'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:6.1.0'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
     implementation 'org.springframework.cloud:spring-cloud-starter-config'
     implementation 'org.springframework.cloud:spring-cloud-starter-bus-amqp'
@@ -174,6 +172,12 @@ test {
     }
 }
 
+test {
+    useJUnitPlatform()
+    systemProperties = System.properties
+    jvmArgs "--add-opens", "java.base/java.lang=ALL-UNNAMED"
+    jvmArgs "--add-opens", "java.base/java.util=ALL-UNNAMED"
+}
 jacocoTestReport {
     dependsOn test // tests are required to run before generating the report
 }
